--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 									<li itemscope itemtype="http://schema.org/SoftwareApplication"><a itemprop="url" href="#buttons">Buttons</a></li>
 									<li itemscope itemtype="http://schema.org/SoftwareApplication"><a itemprop="url" href="#images">Images</a></li>
 									<li itemscope itemtype="http://schema.org/SoftwareApplication"><a itemprop="url" href="#fades">Fades</a></li>
+									<li itemscope itemtype="http://schema.org/SoftwareApplication"><a itemprop="url" href="#badges">Badges</a></li>
 								</ul>
 							</nav>
 						</div>
@@ -532,6 +533,30 @@
 							<div class="small-12 medium-6 columns text-center">
 								<p class="fade hide">Hover to show</p>
 								<span>goodbye!</span>
+							</div>
+						</div>
+						<div class="row">
+							<div id="badges"></div>
+							<div class="small-12 columns">
+								<hr/>
+								<strong>Badges</strong>
+							</div>
+							<div class="small-12 columns text-center">
+								<span class="badge primary">Primary</span>
+								<span class="badge secondary">Secondary</span>
+								<span class="badge success">Success</span>
+								<span class="badge error">Danger</span>
+								<span class="badge warning">Warning</span>
+								<span class="badge light">Light</span>
+								<span class="badge dark">Dark</span> <br/>
+								<span class="badge instagram">Instagram</span>
+								<span class="badge facebook">Facebook</span>
+								<span class="badge twitter">Twiter</span>
+								<span class="badge pinterest">Pinterest</span>
+								<span class="badge etsy">Etsy</span>
+								<span class="badge buffer">Buffer</span>
+								<span class="badge reddit">Reddit</span>
+							</br/>
 							</div>
 						</div>
 					</div>
