--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 								<span>goodbye!</span>
 							</div>
 						</div>
-						<div class="row">
+						<div class="row badgeHolder">
 							<div id="badges"></div>
 							<div class="small-12 columns">
 								<hr/>
