Form styling [Select dropdowns with icons, File input]

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 	<meta name="description" content="Extremely Lightweight, Basic Flex CSS Grid Built From Simple Mixins for Developers"/>
 	<meta name="keywords" content"cattlegrid, cattle grid, css, framework, flexbox, flexgrid, simple, grid"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-
 	<link href="https://usecattlegrid.com" rel="canonical"/>
 	<meta name="robots" content="index,follow,noodp"/>
 	<meta name="author" content="ceryni"/>
@@ -35,7 +34,6 @@
 	<meta property="og:url" content="https://usecattlegrid.com"/>
 	<meta property="og:site_name" content="Cattle Grid"/>
 	<meta property="og:image" content="https://usecattlegrid.com/assets/images/og-cattlegrid.png">
-
 	<!--  Favicons  -->
 	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="./assets/images/apple-touch-icon-57x57.png"/>
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="./assets/images/apple-touch-icon-114x114.png"/>
@@ -453,6 +451,28 @@
 								</label>
 								<hr/>
 							</div>
+							<div class="columns small-12 large-12">
+								<strong>File upload</strong>
+								<p>
+									To show the file name next to the button after a file has been chosen, sadly you will need some very simple js!
+								</p>
+								<input type="file" id="docUploadID" name="photoUpload" class="fileInput" data-type="file" />
+								<label for="docUploadID">
+									<span><span class="fa fa-upload" aria-hidden="true"></span> &nbsp; Select a file...</span>
+								</label>
+								<hr/>
+							</div>
+							<div class="columns small-12 large-12">
+								<strong>Select Options with icons</strong>
+								<div class="select-wrapper">
+									<select>
+										<option>Option 1, nice and simple!</option>
+										<option>Option 2</option>
+										<option>Option 3</option>
+									</select>
+								</div>
+								<hr/>
+							</div>
 						</div>
 						<div class="row">
 							<div id="buttons"></div>
@@ -574,10 +594,8 @@
 				</footer>
 			</div>
 		</main>
-
 		<!--  Global site tag (gtag.js) - Google Analytics  -->
 		<script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script><script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-131546424-1"></script>
 		<script></script>
-
 	</body>
 </html>
