Rejig of content

--- a/index.html
+++ b/index.html
@@ -367,27 +367,36 @@
 							</div>
 							<div class="columns small-12 large-6">
 								<label for="f4">Select field:</label>
-								<div class="select-wrapper name">
 									<select id="f4">
-										<option>
-											Option 01
-										</option>
-										<option>
-											Option 02
-										</option>
-									</select>
-								</div>
+									<option>
+										Option 01
+									</option>
+									<option>
+										Option 02
+									</option>
+								</select>
 							</div>
 							<div class="columns small-12 large-6">
 								<label for="f5">Select field:</label>
-								<div class="select-wrapper name">
-									<select id="f5" class="rounded">
-										<option>
-											Option 01
-										</option>
-										<option>
-											Option 02
-										</option>
+								<select id="f5" class="rounded">
+									<option>
+										Option 01
+									</option>
+									<option>
+										Option 02
+									</option>
+								</select>
+							</div>
+							<div class="small-12 columns">
+								<hr/>
+							</div>
+							<div class="columns small-12 large-12">
+								<strong>Select Options with icons</strong>
+								<div class="select-wrapper location">
+									<select>
+										<option>Option 1, nice and simple!</option>
+										<option>Option 2</option>
+										<option>Option 3</option>
 									</select>
 								</div>
 							</div>
@@ -460,17 +469,6 @@
 								<label for="docUploadID">
 									<span><span class="fa fa-upload" aria-hidden="true"></span> &nbsp; Select a file...</span>
 								</label>
-								<hr/>
-							</div>
-							<div class="columns small-12 large-12">
-								<strong>Select Options with icons</strong>
-								<div class="select-wrapper">
-									<select>
-										<option>Option 1, nice and simple!</option>
-										<option>Option 2</option>
-										<option>Option 3</option>
-									</select>
-								</div>
 								<hr/>
 							</div>
 						</div>
