--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 						</div>
 						<div id="headlines"></div>
 						<div class="row">
-							<div class="columns small-12 headlines">
+							<div class="small-12 columns headlines">
 								<hr/>
 								<h1>
 									Cattle Grid | A simple, configurable CSS Flexbox Framework
@@ -187,7 +187,7 @@
 								<hr/>
 							</div>
 							<div id="list"></div>
-							<div class="columns small-12">
+							<div class="small-12 columns">
 								<strong>List items</strong>
 								<ul>
 									<li>This is a list item in the Cattle Grid</li>
@@ -205,7 +205,7 @@
 								</ul>
 								<hr/>
 							</div>
-							<div class="columns small-12">
+							<div class="small-12 columns">
 								<strong>Ordered lists</strong>
 								<ol>
 									<li>This is an ordered list in the Cattle Grid</li>
@@ -221,7 +221,7 @@
 								<hr/>
 							</div>
 							<div id="tables"></div>
-							<div class="columns small-12">
+							<div class="small-12 columns">
 								<strong>A Table</strong>
 								<table>
 									<tbody><tr>
@@ -268,7 +268,7 @@
 								<hr/>
 							</div>
 							<div id="quotes"></div>
-							<div class="columns small-12">
+							<div class="small-12 columns">
 								<strong>Block Quotes</strong>
 								<blockquote>
 									<p>
@@ -279,7 +279,7 @@
 								</blockquote>
 								<hr/>
 							</div>
-							<div class="columns small-12">
+							<div class="small-12 columns">
 								<strong>Block Quotes with Cite</strong>
 								<blockquote>
 									<p itemscope itemtype="http://schema.org/SoftwareApplication"><em>Continuining on from above.. </em> The files I've added into the base folder are just things I think could be useful, but they're not a necessity. If you like how this is organised and structured, just wait until you see the <a itemprop="url" target="_blank" href="https://www.usecattlegrid.com/wordpress">Wordpress theme</a>!</p>
@@ -289,7 +289,7 @@
 								</blockquote>
 								<hr/>
 							</div>
-							<div class="columns small-12">
+							<div class="small-12 columns">
 <strong>Pre Code</strong>
 <pre><code>#header h1 a {
 	display: block;
@@ -298,7 +298,7 @@
 }</code></pre>
 								<hr/>
 							</div>
-							<div class="columns small-12">
+							<div class="small-12 columns">
 								<div id="text"></div>
 								<strong>Address</strong>
 								<address>
@@ -306,7 +306,7 @@
 								</address>
 								<hr/>
 							</div>
-							<div class="columns small-12 medium-4">
+							<div class="small-12 medium-4 columns">
 								<p>
 									I am <a href="#">the a tag</a>   <br/>
 									I am <abbr title="test">the abbr tag</abbr>   <br/>
@@ -318,7 +318,7 @@
 									I am <del>the del tag</del>   <br/>
 								</p>
 							</div>
-							<div class="columns small-12 medium-4">
+							<div class="small-12 medium-4 columns">
 								<p>
 									I am <dfn>the dfn tag</dfn>   <br/>
 									I am <em>the em tag</em>   <br/>
@@ -331,7 +331,7 @@
 									I am <span>the span tag</span>   <br/>
 								</p>
 							</div>
-							<div class="columns small-12 medium-4">
+							<div class="small-12 medium-4 columns">
 								<p>
 									I am <sub>the sub tag</sub>   <br/>
 									I am <tt>the tt tag</tt>   <br/>
@@ -343,29 +343,29 @@
 								</p>
 							</div>
 							<div id="form"></div>
-							<div class="columns small-12">
+							<div class="small-12 columns">
 								<hr/>
 								<strong>Inputs</strong>
 							</div>
-							<div class="columns small-12 medium-4">
+							<div class="small-12 medium-4 columns">
 								<label for="f1">Text input:</label>
 								<input type="text" id="f1" value="input text"/>
 							</div>
-							<div class="columns small-12 medium-4">
+							<div class="small-12 medium-4 columns">
 								<label for="f2">Text input Rounded:</label>
 								<input type="text" id="f2" value="input text" class="rounded"/>
 							</div>
-							<div class="columns small-12 medium-4">
+							<div class="small-12 medium-4 columns">
 								<label for="pw">Password input:</label>
 								<input type="password" id="pw" value="password"/>
 							</div>
 							<div class="small-12 columns">
 								<hr/>
 							</div>
-							<div class="columns small-12">
+							<div class="small-12 columns">
 								<strong>Select Options</strong>
 							</div>
-							<div class="columns small-12 large-6">
+							<div class="small-12 large-6 columns">
 								<label for="f4">Select field:</label>
 									<select id="f4">
 									<option>
@@ -376,7 +376,7 @@
 									</option>
 								</select>
 							</div>
-							<div class="columns small-12 large-6">
+							<div class="small-12 large-6 columns">
 								<label for="f5">Select field:</label>
 								<select id="f5" class="rounded">
 									<option>
@@ -390,8 +390,8 @@
 							<div class="small-12 columns">
 								<hr/>
 							</div>
-							<div class="columns small-12 large-12">
-								<strong>Select Options with icons</strong>
+							<div class="small-12 large-12 columns">
+								<strong>Select with icon</strong>
 								<div class="select-wrapper location">
 									<select>
 										<option>Option 1, nice and simple!</option>
@@ -403,11 +403,30 @@
 							<div class="small-12 columns">
 								<hr/>
 							</div>
-							<div class="columns small-12 large-6">
+							<div class="small-12 columns">
+								<strong>Loaders</strong>
+							</div>
+							<div class="small-12 large-6 columns">
+								<label>Value</label>
+								<progress class="progress primary" value="20" max="100">15%</progress>
+								<br/>
+								<progress class="progress secondary" value="40" max="100">15%</progress>
+							</br/>
+							</div>
+							<div class="small-12 large-6 columns">
+								<label>Indeterminate</label>
+								<progress class="progress primary" max="100">15%</progress>
+								<br/>
+								<progress class="progress secondary" max="100">15%</progress>
+							</div>
+							<div class="small-12 columns">
+								<hr/>
+							</div>
+							<div class="small-12 large-6 columns">
 								<strong>Text Area</strong>
 								<textarea id="f5" cols="30" rows="5">Textarea text</textarea>
 							</div>
-							<div class="columns small-12 large-6">
+							<div class="small-12 large-6 columns">
 								<strong>Text Area Rounded</strong>
 								<textarea class="rounded" id="f6" cols="30" rows="5">Textarea text</textarea>
 							</div>
@@ -433,25 +452,25 @@
 								<hr/>
 								<strong>Radio Boxes</strong>
 							</div>
-							<div class="columns small-4 medium-4 large-2">
+							<div class="small-4 medium-4 large-2 columns">
 								<label class="control radio" for="radio1">
 									<input type="radio" id="radio1" name="radioGroup" value="radio1"/>
 									<div class="checky"></div>
 								</label>
 							</div>
-							<div class="columns small-4 medium-4 large-2">
+							<div class="small-4 medium-4 large-2 columns">
 								<label class="control radio" for="radio2">
 									<input type="radio" id="radio2" name="radioGroup" value="radio1"/>
 									<div class="checky"></div>
 								</label>
 							</div>
-							<div class="columns small-4 large-4">
+							<div class="small-4 large-4 columns">
 								<label class="control radio" for="radio3">
 									<input type="radio" id="radio3" name="radioGroup" value="radio1"/>
 									<div class="checky"></div>
 								</label>
 							</div>
-							<div class="columns small-12 large-12">
+							<div class="small-12 large-12 columns">
 								<hr/>
 								<strong>Switch</strong>
 								<label>
@@ -460,7 +479,7 @@
 								</label>
 								<hr/>
 							</div>
-							<div class="columns small-12 large-12">
+							<div class="small-12 large-12 columns">
 								<strong>File upload</strong>
 								<p>
 									To show the file name next to the button after a file has been chosen, sadly you will need some very simple js!
